FEATURE | UI structure css

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
+  background: #48ace1;
+  /* Old browsers */
+  background: -moz-linear-gradient(left,
+      #547499 0%,
+      #48ace1 10%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,
+      #547499 0%,
+      #48ace1 10%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right,
+      #547499 10%,
+      #48ace1 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#547499', endColorstr='#7db9e8', GradientType=1);
+  /* IE6-9 */
+
+
 }
 
 code {
