--- a/src/utils/scss/_constants.scss
+++ b/src/utils/scss/_constants.scss
@@ -16,17 +16,20 @@ $br-50: 50%;
 $base-gutter: $num-08;
 
 $box-shadow-card-sm: 0 0 $num-04 0 rgba(0, 0, 0, 0.08),
-  0 $num-02 $num-04 0 rgba(0, 0, 0, 0.16);
+0 $num-02 $num-04 0 rgba(0, 0, 0, 0.16);
 $box-shadow-button-sm: 0 0 $num-04 0 rgba(0, 0, 0, 0.08),
-  0 $num-02 $num-04 0 rgba(0, 0, 0, 0.16);
+0 $num-02 $num-04 0 rgba(0, 0, 0, 0.16);
 
-$grid-breakpoints: (
-  xs: 0,
+$grid-breakpoints: (xs: 0,
   sm: 576px,
   md: 768px,
   lg: 992px,
   xl: 1200px,
 ) !default;
 
-$c-main: #1572b9;
+$c-main: #48ace1;
 $c-main-lighter: #67aee5;
+
+.m-0-auto {
+  margin: 0 auto;
+}
